--- a/.envrc
+++ b/.envrc
@@ -4,6 +4,7 @@ export WORKSPACE=$PWD
 # JUnit jars
 export CLASSPATH=$PWD/JFreeChart/lib/junit-4.11.jar:$CLASSPATH
 export CLASSPATH=$PWD/JFreeChart/lib/hamcrest-core-1.3.jar:$CLASSPATH
+export CLASSPATH=$PWD/JFreeChart/lib/hamcrest-library-1.3.jar:$CLASSPATH
 
 # jfreechart jars
 # export CLASSPATH=$PWD/JFreeChart/lib/jfreechart-1.0.19-demo.jar:$CLASSPATH
